# destiny

./: .gitignore  CMakeLists.txt  README.md  carbon-destinyConfig.cmake  destiny.rc  vcpkg-configuration.json  vcpkg.json
.teamcity/: pom.xml  settings.kts
.teamcity/MacOS/: Project.kt
.teamcity/Windows/: Project.kt
.teamcity/_Self.kt/: Project.kt
.teamcity/_Self.kt/buildTypes/: PublishToPerforce.kt
cmake/: CcpBuildConfigurations.cmake  DestinyConfig.cmake
destiny/: Ball.cpp  Ball.h  Ball_Blue.cpp  Ballpark.cpp  Ballpark.h  Ballpark_Blue.cpp  Box.cpp  Box.h  BoxShape.cpp  BoxShape.h  CMakeLists.txt  Capsule.cpp  Capsule.h  Capsule_Blue.cpp  Collision.cpp  Collision.h  DstConstants.cpp  DstConstants.h  Equations.mws  Hashers.h  MapOfBalls.h  MapOfLongLongs.h  MiniBall.cpp  MiniBall.h  MiniBox.cpp  MiniBox.h  MiniCapsule.h  OrientedBox.cpp  OrientedBox.h  OrientedBox_Blue.cpp  Partition.cpp  Partition.h  Partitionable.h  Plane.cpp  Plane.h  Quaternion.h  Random.h  ReadMe.txt  RegenerateProjectFile.cmd  StaticCollidable.cpp  (+18 more)
destiny/destiny.xcodeproj/: project.pbxproj
destiny/include/: IBall.h  IDstConstants.h  destinyId.cxx  destinyId.h
destinyTest/: CMakeLists.txt  RegenerateProjectFile.cmd  StdAfx.h  TestAABB.cpp  TestBoxShape.cpp  TestCollision.cpp  TestPlane.cpp  TestTriangle.cpp  TestVector3d.cpp  destintyTest_v141.vcxproj  destinyTest.ccpproj  destinyTest.cpp  destinyTest.vcxproj  destinyTest.vcxproj.filters
docs/: destiny-python-seam.md  integration-roadmap.md  macos-bringup.md  park-update-stream.md  thunker-contract-audit.md
include/: DestinyEmbedded.h  IEveBallpark.h  IEveReferencePoint.h
python/destiny/: __init__.py  package.yaml
python/destiny/_util/: decometaclass.py  settings.py  signal.py  timing.py
python/destiny/net/: __init__.py  const.py
python/destiny/net/client/: __init__.py  _baseticker.py  _interface.py  _ticker.py  _util.py
python/destiny/net/server/: __init__.py  _actions.py  _baseticker.py  _bubbleupdater.py  _interface.py  _parkupdatebatcher.py  _ticker.py
python/destiny/test/: ctesthelper.py  helpers.py  test_ball.py  test_cleanup.py  test_configure.py  test_using_correct_module.py
python/destiny/test/ballpark/: test_boxes_and_bubbles.py  test_bubble_transitions.py  test_callbacks.py  test_getters_and_setters.py  test_lifecycle_management.py  test_movement_controls.py  test_stream_read_write.py  test_time.py  test_visibility.py
python/destiny/test/ballpark/evolve/: __init__.py  test_add.py  test_collision.py  test_follow.py  test_goto.py  test_iterative_collision.py  test_minis.py  test_missile.py  test_orbit.py  test_simple_collision.py  test_stop.py  test_warp.py
python/destiny/test/net/: __init__.py
python/destiny/test/net/client/: helpers.py  test_mergestateintohistory.py  test_ticker.py
python/destiny/test/net/server/: helpers.py  test_actions.py  test_bubbleupdater.py  test_ticker.py  test_updatebatcher.py
src/: AABB.cpp  AABB.h  Ball.cpp  Ball.h  Ball_Blue.cpp  Ballpark.cpp  Ballpark.h  Ballpark_Blue.cpp  Box.cpp  Box.h  BoxShape.cpp  BoxShape.h  Capsule.cpp  Capsule.h  Capsule_Blue.cpp  Collision.cpp  Collision.h  CollisionBallProperties.cpp  CollisionBallProperties.h  CollisionStructures.cpp  CollisionStructures.h  DestinyEmbedded.cpp  DestinyEmbeddedBlue.cpp  DestinyEmbeddedInternal.h  DstConstants.cpp  DstConstants.h  IBall.h  IDstConstants.h  MapOfBalls.h  MapOfLongLongs.h  MiniBall.cpp  MiniBall.h  MiniBox.cpp  MiniBox.h  MiniBox_Blue.cpp  MiniCapsule.cpp  MiniCapsule.h  MiniCapsule_Blue.cpp  Miniball_Blue.cpp  OrientedBox.cpp  (+30 more)
tests/: CMakeLists.txt  DestinyEmbeddedApproachContractTest.cpp  DestinyEmbeddedCelestialContractTest.cpp  DestinyEmbeddedContractTest.cpp  DestinyEmbeddedFullStateContractTest.cpp  DestinyEmbeddedMotionContractTest.cpp  DestinyEmbeddedOrbitContractTest.cpp  DestinyEmbeddedRecorderTest.cpp  DestinyEmbeddedSeamTest.cpp  DestinyEmbeddedWarpContractTest.cpp  StdAfx.h  TestAABB.cpp  TestBoxShape.cpp  TestCollision.cpp  TestPlane.cpp  TestTriangle.cpp  TestVector3d.cpp  check-embedded-python-symbols.sh  destinyTest.cpp
tests/data/: embedded-python-symbol-whitelist.txt  pl11a-goto.csv  pl11a-provenance.json  pl11a-stop.csv  pl11b-orbit-new.csv  pl11b-provenance.json  pl11c-provenance.json  pl11c-warp.csv  pl11d-approach.csv  pl11d-provenance.json
tools/benchmark/: run.bat  run.py
tools/benchmark/benchmark/: __init__.py  destinyinterface.py  initializer.py  loader.py  output.py  policy.py  results.py  runner.py  server.py  util.py
